--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>Controlador de Autito</h1>
+    <form id="ejecutar-form">
+      <label for="comando">Comando:</label>
+      <input type="text" id="comando" />
+      
+      <input type="submit" value="Ejecutar" id="ejecutar-button" />
     </form>
     <div id="resultado-div"></div>
 
