--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
-<html>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    body{
+      background-color: rgba(250, 128, 114,.5);
+      color:brown ;
+    }
+    h1{
+      padding: 5rem;
+    }
+    #app{
+      display: flex;
+      top: 10vh;
+      align-items: center;
+      width: 100%;
+      height: 100vh;
+      flex-direction: column;
+    
+    }
+  </style>
+</head>
+<body>
+  <div id="app">
     <h1>Controlador de Autito</h1>
     <form id="ejecutar-form">
       <label for="comando">Comando:</label>
@@ -8,7 +33,8 @@
       <input type="submit" value="Ejecutar" id="ejecutar-button" />
     </form>
     <div id="resultado-div"></div>
+  </div>
 
-    <script type="module" src="./src/presenter.js"></script>
-  </body>
+  <script type="module" src="./src/presenter.js"></script>
+</body>
 </html>
